Can print out polygon without holes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,9 @@
 cmake_minimum_required(VERSION 3.0)
 
 set(CMAKE_TOOLCHAIN_FILE "D:/vcpkg/vcpkg/scripts/buildsystems/vcpkg.cmake")
-set(df "${PROJECT_SOURCE_DIR}data")
+set(data_folder "${PROJECT_SOURCE_DIR}data/")
+# aux_source_directory("${PROJECT_SOURCE_DIR}data/" DATA_FILES)
+# message(${DATA_FILES})
 
 # Tell CMake what our project is called
 project(visualization)
@@ -13,10 +15,13 @@ project(visualization)
 # If the package can't be found, terminate the script
 find_package(SFML 2.5 COMPONENTS graphics REQUIRED)
 
-file(COPY ${df} DESTINATION ${CMAKE_CURRENT_BINARY_DIR}) 
+file(COPY ${data_folder} DESTINATION ${CMAKE_CURRENT_BINARY_DIR}) 
+
+configure_file(${data_folder}/input.txt
+    ${CMAKE_CURRENT_BINARY_DIR}${data_folder} COPYONLY)
 
 # Tell the compiler where the source code is, and add it to the executable
-add_executable(visualization src/Main.cpp)
+add_executable(visualization src/main.cpp)
 
 # Add the following SFML module to the application:
 target_link_libraries(visualization PRIVATE sfml-graphics)
