--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,8 +4,7 @@
 #    - Thor 
 #    - Boost.Polygon
 # (Please install dependencies above in vcpkg before building the project)
-# (Hint: You have to add "-DCMAKE_TOOLCHAIN_FILE=<your-path-to-vcpkg.cmake>" when you 
-#   configure the project)
+# (Hint: You have to add "-DCMAKE_TOOLCHAIN_FILE=<your-path-to-vcpkg.cmake>" when you configure the project)
 
 cmake_minimum_required(VERSION 3.10)
 
@@ -22,7 +21,7 @@ file(COPY cmake/FindThor.cmake DESTINATION "${_VCPKG_ROOT_DIR}/packages/thor_${V
 list(APPEND CMAKE_MODULE_PATH "${_VCPKG_ROOT_DIR}/packages/thor_${VCPKG_TARGET_TRIPLET}/cmake")
 find_package(Thor 2.0 REQUIRED)
 
-add_executable(visualization src/Main.cpp src/App.h src/App.cpp)
+add_executable(visualization include/App.h include/Solution.h src/Main.cpp src/App.cpp src/Solution.cpp)
 
 target_include_directories(visualization 
     PRIVATE ${BOOST_POLYGON_INCLUDE_DIR} 
